@@ -1,6 +1,13 @@
+Sun Jun  1 14:30:53 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * docs/releasenotes.html:
+        * docs/todo.html:
+
+          Added items related to the CIDL compiler.
+
 Sat May 31 10:54:11 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
-	* Makefile: We dont have any specila files like INSTALL that needs
+	* Makefile: We dont have any special files like INSTALL that needs
 	  specila attention during the release.
 
 Fri May 30 19:33:36 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
